# 7zFM-encoding

./: CLAUDE.md  CMakeLists.txt  PATCH_GUIDE.md  README.md
.github/workflows/: build-windows.yml  release.yml
CPP/7zip/: LWZipCodePage.cpp  LWZipCodePage.h
CPP/7zip/UI/Agent/: AgentProxy.cpp
CPP/7zip/UI/FileManager/: App.cpp  App.h  EncodingSwitch.cpp  EncodingSwitch.h  FM.cpp  FM.mak  makefile  resource.h
GUI/macOS/: CMakeLists.txt  LWArchiveHandler.cpp  LWArchiveHandler.h  LWEncodingSwitch.cpp  LWEncodingSwitch.h  LWMainWindow.cpp  LWMainWindow.h  main.cpp
